--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-gymnasium[mujoco] 
-stable-baselines3[extra]
+# general imports
 tqdm
 gitpython
+
+# pybullet
+pybullet
+
+# mujoco 
+gymnasium[mujoco] 
 pyquaternion
+
+# stable baseline
+stable-baselines3[extra]
