--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Project related files
+### Project related files ###
+
 # datasets
 datasets
+
+# old code 
+old
